# simulation-grid

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/: constants.py  main.py
src/examples/: uw_e7_prompt.py
src/grid/: grid.py  node.py
src/interface/: base.py  game.py  text.py
src/utils/: interactions.py  waypoints.py
